# todolist

./: .gitignore  README.md  app.py  pyproject.toml
frontend/: package.json
frontend/src/: App.js  setupProxy.js
