[project]
name = "todolist"
version = "0.1.0"
description = "first project"
authors = [
    {name = "sillontea",email = "sillontea@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
